# personal-finance

./: .gitignore  README.md  finance_export.csv  pyproject.toml
src/finance/: __init__.py  cli.py  tracker.py
src/personal_finance.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: test_tracker.py
