[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "personal-finance"
version = "0.1.0"
description = "CLI-based personal finance tracker"
requires-python = ">=3.10"
dependencies = [
    "rich>=13.0",
    "typer>=0.9",
]

[project.scripts]
finance = "finance.cli:app"